--- a/css/techstack.css
+++ b/css/techstack.css
@@ -443,6 +443,16 @@ body.lightmode .item {
   }
 }
 
+@media (max-width: 1024px) and (min-width: 769px) {
+    header {
+      padding: 30px 40px;
+    }
+
+.item{
+  filter: grayscale(0)
+}
+}
+
 /* Responsive */
 @media (max-width: 768px) {
   header {
@@ -519,4 +529,5 @@ body.lightmode .item {
   .item{
   filter: grayscale(0)
 }
+
 }
